--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,14 @@ mutagen>=1.45.1
 musicbrainzngs>=0.7.1
 requests>=2.28.1
 langdetect>=1.0.9
+ratelimit>=2.2.1
+beautifulsoup4>=4.9.3
+redis>=4.5.1
+discogs-client>=2.3.0
+spotipy>=2.19.0
+pylast>=5.1.0
+cachetools>=5.3.0
+pytest>=7.3.1
+pytest-cov>=4.0.0
+black>=23.3.0
+mypy>=1.3.0
