--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
-PySide6>=6.0.0
-mutagen>=1.45.1
+# Core dependencies
+PySide6>=6.5.0
+mutagen>=1.46.0
 musicbrainzngs>=0.7.1
-requests>=2.28.1
-langdetect>=1.0.9
+requests>=2.31.0
 ratelimit>=2.2.1
-beautifulsoup4>=4.9.3
-redis>=4.5.1
-discogs-client>=2.3.0
-spotipy>=2.19.0
 pylast>=5.1.0
-cachetools>=5.3.0
-pytest>=7.3.1
-pytest-cov>=4.0.0
-black>=23.3.0
-mypy>=1.3.0
+beautifulsoup4>=4.12.2
+
+# Testing dependencies
+pytest>=7.4.0
+pytest-qt>=4.2.0
+pytest-cov>=4.1.0
+coverage>=7.3.0
+
+# Development tools
+black>=23.3.0  # Code formatting
+isort>=5.12.0  # Import sorting
+flake8>=6.0.0  # Linting
+mypy>=1.3.0   # Type checking
+
+# Documentation
+sphinx>=7.0.1
+sphinx-rtd-theme>=1.2.0
