--- a/pytest.ini
+++ b/pytest.ini
@@ -3,7 +3,7 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = -v --tb=short
+addopts = --maxfail=5 --disable-warnings --tb=short -p no:pytest_xvfb
 
 # Configuracion para pytest-asyncio
 asyncio_default_fixture_loop_scope = function
