--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,7 @@ mypy>=1.3.0   # Type checking
 # Documentation
 sphinx>=7.0.1
 sphinx-rtd-theme>=1.2.0
+
+tabulate>=0.9.0
+pathvalidate>=2.5.0
+psutil>=5.8.0
